cmake_minimum_required(VERSION 3.19)
project(Quiz_Funix)

set(CMAKE_CXX_STANDARD 14)

add_executable(Quiz_Funix quiz_2_8.cpp)
add_executable(Quiz_Funix2 quiz_3_3.cpp)
add_executable(Quiz_Funix3 quiz_3_1.cpp)
add_executable(Quiz_Funix4 quiz_4_6.cpp)
add_executable(Quiz_Funix5 quiz_4_7.cpp)
add_executable(Quiz_Funix6 print_1.cpp)
add_executable(Quiz_Funix7 quiz_4_1.cpp)
add_executable(quiz_5_7 quiz_5_7.cpp)
